--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
   encoding: unicode
   database: shop_app_development
   pool: 5
-  username: shop_app
-  password:
+  username: postgres
+  password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,13 +43,13 @@ test:
   encoding: unicode
   database: shop_app_test
   pool: 5
-  username: shop_app
-  password:
+  username: postgres
+  password: 
 
 production:
   adapter: postgresql
   encoding: unicode
   database: shop_app_production
   pool: 5
-  username: shop_app
-  password:
+  username: postgres
+  password: 
