--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   encoding: unicode
   database: shop_app_development
   pool: 5
-  username: postgres
+  username: me
   password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -43,7 +43,7 @@ test:
   encoding: unicode
   database: shop_app_test
   pool: 5
-  username: postgres
+  username: me
   password: 
 
 production:
@@ -51,5 +51,5 @@ production:
   encoding: unicode
   database: shop_app_production
   pool: 5
-  username: postgres
+  username: me
   password: 
